feat: add circuit breaker functionality with Opossum and enhance Axios retry logic

--- a/worker-service/package.json
+++ b/worker-service/package.json
@@ -15,6 +15,7 @@
     "bullmq": "^5.61.2",
     "dotenv": "^17.2.3",
     "mongoose": "^8.19.2",
+    "opossum": "^9.0.0",
     "redis": "^5.9.0",
     "winston": "^3.18.3"
   }
