--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
+volumes:
+  redis-data:
+
 services:
+  redis:
+      image: redis:alpine
+      restart: always
+      ports:
+        - "6379:6379" 
+      volumes:
+        - D:/WEB/redis-data:/data
+      command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+
   api-gateway:
     build: ./api-gateway
     restart: always
@@ -9,32 +21,43 @@ services:
       - auth-service
       - data-service
       - websocket-service
+      - redis
 
   auth-service:
     build: ./auth-service
     restart: always
     env_file: ./.env
+    depends_on:
+      - redis
 
 
   data-service:
     build: ./data-service
     restart: always
     env_file: ./.env
+    depends_on:
+      - redis
 
   worker-service:
     build: ./worker-service
     restart: always
     env_file: ./.env
+    depends_on:
+      - redis
 
   scheduler-service:
     build: ./scheduler-service
     restart: always
     env_file: ./.env
+    depends_on:
+      - redis
 
   websocket-service:
     build: ./websocket-service
     restart: always
     env_file: ./.env
+    depends_on:
+      - redis
 
   load-tester:
     image: yamaszone/hey
@@ -45,4 +68,5 @@ services:
       - websocket-service
       - worker-service
       - scheduler-service
+      - redis
 
