feat(graphql-service): initialize GraphQL service with Apollo Server, MongoDB connection, and user authentication
- Added package.json with necessary dependencies for Apollo Server, Express, and MongoDB.
- Implemented main application logic in app.js, including CORS setup and GraphQL endpoint.
- Configured MongoDB connection in db.config.js and established connection on server start.
- Defined User model with Mongoose in Users.models.js, including OAuth support.
- Created GraphQL schema and resolvers for user and coin data, including watchlist and portfolio features.
- Implemented custom error handling with ApiError class for consistent error responses.
- Set up logging with Winston for better monitoring and debugging.
- Added service client utilities for making requests to authentication and data services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,16 @@ services:
     depends_on:
       - redis
 
+  graphql-service:
+    build: ./graphql-service
+    restart: always
+    env_file: ./.env
+    depends_on:
+      - api-gateway
+      - auth-service
+      - data-service
+      - redis
+
   worker-service:
     build: ./worker-service
     restart: always
