--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       ports:
         - "6379:6379" 
       volumes:
-        - D:/WEB/redis-data:/data
+        - C:/D_Drive/WEB/redis-data:/data
       command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
 
   api-gateway:
