--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -24,6 +24,7 @@
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "morgan": "^1.10.1",
     "rate-limit-redis": "^4.2.3",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
