--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "graphql": "^16.12.0",
     "mongoose": "^9.0.0",
+    "morgan": "^1.10.1",
     "winston": "^3.18.3"
   }
 }
