--- a/websocket-service/package.json
+++ b/websocket-service/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3"
