--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -28,6 +28,7 @@
     "rate-limit-redis": "^4.2.3",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
+    "uuid": "^13.0.0",
     "winston": "^3.18.3"
   }
 }
