feat(husky): add husky dependency and configuration for Git hooks

--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo 'No tests yet, skipping...' && exit 0"
   },
