--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,33 @@ services:
       ports:
         - "6379:6379" 
       volumes:
-        - C:/D_Drive/WEB/redis-data:/data
+        - ${VOLUME_PATH}/redis-data:/data
       command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+
+  mongo:
+    image: mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    volumes:
+      - ${VOLUME_PATH}/mongo-data:/data/db
+    command: ["--quiet"]
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL}
+      ME_CONFIG_BASICAUTH_ENABLED: ${ME_CONFIG_BASICAUTH_ENABLED}
+      ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD}
+    depends_on:
+      - mongo
 
   api-gateway:
     build: ./api-gateway
@@ -26,9 +51,10 @@ services:
     env_file: ./.env
     depends_on:
       - redis
+      - mongo
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/api/v1/users/health"]
-      interval: 10s
+      test: ["CMD", "curl", "-f", "${AUTH_SERVICE_URL}/api/v1/users/health"]
+      interval: 120s
       timeout: 5s
       retries: 3
 
@@ -39,9 +65,10 @@ services:
     env_file: ./.env
     depends_on:
       - redis
+      - mongo
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8002/api/v1/data/health"]
-      interval: 10s
+      test: ["CMD", "curl", "-f", "${DATA_SERVICE_URL}/api/v1/data/health"]
+      interval: 120s
       timeout: 5s
       retries: 3
 
@@ -54,9 +81,10 @@ services:
       - auth-service
       - data-service
       - redis
+      - mongo
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8003/health"]
-      interval: 10s
+      test: ["CMD", "curl", "-f", "${GRAPHQL_SERVICE_URL}/health"]
+      interval: 120s
       timeout: 5s
       retries: 3
 
@@ -66,6 +94,7 @@ services:
     env_file: ./.env
     depends_on:
       - redis
+      - mongo
 
   scheduler-service:
     build: ./scheduler-service
@@ -80,9 +109,10 @@ services:
     env_file: ./.env
     depends_on:
       - redis
+      - mongo
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8004/api/v1/websocket/health"]
-      interval: 10s
+      test: ["CMD", "curl", "-f", "${WEBSOCKET_SERVICE_URL}/api/v1/websocket/health"]
+      interval: 120s
       timeout: 5s
       retries: 3
 
@@ -96,4 +126,5 @@ services:
       - worker-service
       - scheduler-service
       - redis
+      - mongo
 
