--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -25,10 +25,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
+    "prom-client": "^15.1.3",
     "rate-limit-redis": "^4.2.3",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "winston-loki": "^6.1.3"
   }
 }
