--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,3 +134,37 @@ services:
       - redis
       - mongo
 
+  prom-server:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus-config.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - api-gateway
+      - auth-service
+      - data-service
+      - websocket-service
+      - worker-service
+      - scheduler-service
+      - graphql-service
+
+  grafana-server:
+    image: grafana/grafana-oss
+    ports:
+      - 5001:3000
+    depends_on:
+      - prom-server
+
+  grafana-loki:
+    image: grafana/loki
+    ports:
+      - 3100:3100
+    depends_on:
+      - api-gateway
+      - auth-service
+      - data-service
+      - websocket-service
+      - worker-service
+      - scheduler-service
+      - graphql-service
